--- a/index.html
+++ b/index.html
@@ -51,8 +51,10 @@
 
 
 <!-- where we draw the simulation -->
-<canvas></canvas>
-
+<div style="display: flex; flex-direction: row;width: 100%; height: 100%;">
+	<canvas id="textures" style="width: 50vw; height: 50vw;"></canvas>
+	<canvas id="simulation" style="width: 50vw;"></canvas>
+</div>
 
 </main>
 
