resizing is smooth

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
 
 <main>
-<div id="debug-overlay">
+<div id="debug-overlay" style="display: none;">
 	<p>
 	ICG Project : Ice Floe
 	<!-- <a href="src/main.js">source</a>  -->
