added sliders to html

--- a/index.html
+++ b/index.html
@@ -56,9 +56,20 @@
 
 
 <!-- where we draw the simulation -->
-<div style="display: flex; flex-direction: row;width: 100%; height: 100%;">
+<div style="display: flex; flex-direction: row;width: 100%; height: 50%;">
 	<canvas id="textures" style="width: 50vw; height: 50vw;"></canvas>
 	<canvas id="simulation" style="width: 50vw; height: 50vw;"></canvas>
+</div>
+
+<div class="slidecontainer">
+	<p> Option 1 :</p>
+  <input type="range" min="1" max="100" value="50" class="slider" id="myRange1">
+  	<p> Option 1 :</p>
+  <input type="range" min="1" max="100" value="50" class="slider" id="myRange2">
+  	<p> Option 1 :</p>
+  <input type="range" min="1" max="100" value="50" class="slider" id="myRange3">
+  	<p> Option 1 :</p>
+  <input type="range" min="1" max="100" value="50" class="slider" id="myRange4">
 </div>
 
 </main>
