--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 	<canvas id="simulation" style="width: 50vw; height: 50vw;"></canvas>
 </div>
 
-<div class="slidecontainer">
+<div class="slidecontainer" style="display: none;">
 	<p> Option 1 :</p>
   <input type="range" min="1" max="100" value="50" class="slider" id="myRange1">
   	<p> Option 1 :</p>
