--- a/index.html
+++ b/index.html
@@ -53,7 +53,16 @@
 </div>
 
 
-
+<div style="color: azure; z-index: 100;display: flex; flex-direction: row;">
+	Zoom: 
+  <input type="range" min="1" max="100" value="50" class="slider" id="myRange1">
+  	Snow:
+  <input type="range" min="1" max="100" value="50" class="slider" id="myRange2">
+  	Reflect:
+  <input type="range" min="1" max="100" value="50" class="slider" id="myRange3">
+  	Refract:
+  <input type="range" min="1" max="100" value="50" class="slider" id="myRange4">
+</div>
 
 <!-- where we draw the simulation -->
 <div style="display: flex; flex-direction: row;width: 100%; height: 50%;">
@@ -61,16 +70,7 @@
 	<canvas id="simulation" style="width: 50vw; height: 50vw;"></canvas>
 </div>
 
-<div class="slidecontainer" style="display: none;">
-	<p> Option 1 :</p>
-  <input type="range" min="1" max="100" value="50" class="slider" id="myRange1">
-  	<p> Option 1 :</p>
-  <input type="range" min="1" max="100" value="50" class="slider" id="myRange2">
-  	<p> Option 1 :</p>
-  <input type="range" min="1" max="100" value="50" class="slider" id="myRange3">
-  	<p> Option 1 :</p>
-  <input type="range" min="1" max="100" value="50" class="slider" id="myRange4">
-</div>
+
 
 </main>
 
