zoom range working on chrome

--- a/index.html
+++ b/index.html
@@ -55,13 +55,13 @@
 
 <div style="color: azure; z-index: 100;display: flex; flex-direction: row;">
 	Zoom: 
-  <input type="range" min="1" max="100" value="50" class="slider" id="myRange1">
+  <input type="range" min="0.2" max="2" value="0.5" class="slider" step="0.01" id="zoomRange">
   	Snow:
-  <input type="range" min="1" max="100" value="50" class="slider" id="myRange2">
+  <input type="range" min="0" max="1" value="0.5" class="slider" step="0.01" id="snowRange">
   	Reflect:
-  <input type="range" min="1" max="100" value="50" class="slider" id="myRange3">
+  <input type="range" min="0" max="1" value="0.5" class="slider" step="0.01" id="reflectRange">
   	Refract:
-  <input type="range" min="1" max="100" value="50" class="slider" id="myRange4">
+  <input type="range" min="0" max="1" value="0.5" class="slider" step="0.01" id="RefractRange">
 </div>
 
 <!-- where we draw the simulation -->
