refract range done

--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
   	Snow:
   <input type="range" min="0" max="1" value="0.5" class="slider" step="0.01" id="snowRange">
   	Reflect:
-  <input type="range" min="0" max="1" value="0.5" class="slider" step="0.01" id="reflectRange">
+  <input type="range" min="0" max="1" value="0.04" class="slider" step="0.01" id="reflectRange">
   	Refract:
-  <input type="range" min="0" max="1" value="0.5" class="slider" step="0.01" id="RefractRange">
+  <input type="range" min="0" max="1" value="0.0" class="slider" step="0.01" id="refractRange">
 </div>
 
 <!-- where we draw the simulation -->
