--- a/index.html
+++ b/index.html
@@ -56,8 +56,11 @@
 <div style="color: azure; z-index: 100;display: flex; flex-direction: row;">
 	Zoom: 
   <input type="range" min="0.2" max="2" value="0.5" class="slider" step="0.01" id="zoomRange">
-  	Snow:
-  <input type="range" min="0" max="1" value="0.5" class="slider" step="0.01" id="snowRange">
+	  Snow:
+	<div> 
+		<input type="range" min="0" max="1" value="0.5" class="slider" step="0.01" id="snowRange1">
+		<input type="range" min="0" max="1" value="0.5" class="slider" step="0.01" id="snowRange2">
+	</div>
   	Reflect:
   <input type="range" min="0" max="1" value="0.04" class="slider" step="0.01" id="reflectRange">
   	Refract:
