bezier curves implemented

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 
 <!-- our implementation -->
 <script src="src/noise.js" defer="true"></script>
+<script src="src/bezierCurves.js" defer="true"></script>
 <script src="src/main_textures.js" defer="true"></script>
 <script src="src/terrain.js" defer="true"></script>
 <script src="src/main_terrain.js" defer="true"></script>
