video recording working

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 <script src="src/icg_screenshot.js" defer="true"></script>
 
 
+
 <!-- our implementation -->
 <script src="src/noise.js" defer="true"></script>
 <script src="src/bezierCurves.js" defer="true"></script>
@@ -74,6 +75,14 @@
 	<canvas id="simulation" style="width: 50vw; height: 50vw;"></canvas>
 </div>
 
+
+<div id="debug-overlay">
+
+
+	<pre id="debug-text"></pre>
+
+	<div id="video-container" />
+</div>
 
 
 </main>
