--- a/index.html
+++ b/index.html
@@ -78,10 +78,9 @@
 
 <div id="debug-overlay">
 
-
 	<pre id="debug-text"></pre>
+	<div id="video-container"></div>
 
-	<div id="video-container" />
 </div>
 
 
