fixed typo and headers

--- a/index.html
+++ b/index.html
@@ -42,13 +42,14 @@
 
 
 
-<h2> Presentation </h2>
+<h2> Overview </h2>
 
 <p>
 	We generate a procedural ice crack texture using a Voronoi diagram
 	and material parameters including a basic Phong shader.
 	We also make use of Bezier curves to move the light and the texture, and use a
-	Perslin Noise to simulate impurities on the ice's surface.
+	Perlin Noise to simulate impurities on the ice's surface.
+
 </p>
 
 <hr class="new1">
@@ -60,7 +61,7 @@
 
 
 
-<h2> Textures overview </h2>
+<h2> Textures </h2>
 
 
 <div>
