--- a/index.html
+++ b/index.html
@@ -113,6 +113,49 @@
   </p>
 
 </center>
+
+
+
+
+<h2> Division of work </h2>
+
+<h3> Etienne </h3>
+
+<ul>
+	<li> setup 2D and 3D environment : <br>
+		 I mainly adapt assignment 7
+	</li>
+	<li> test different types of Worley noise : <br>
+		 euclidian - manhatan - different types of distortion - etc ...
+	</li>
+	<li> Parallax effect : 
+		 implemented first not to cast shadows but the deepness of the ice (with camera positon instead of light),
+		 I then switch to light , because the effect was much more appealing.
+	</li>
+	<li> Cube map , reflect/refract : <br>
+		 here regl.js gallery was my best friend
+	</li>
+	<li> normal map for craks and surface : <br>
+		 It was hard to find a good noise for the surface roughness, and how not to make both normal map smoother.
+	</li>
+		 
+	<li> Bezier curves : <br>
+		 I first implemented in processing (the repport bezier curves figures are made with it),
+		 then exported to JS.
+	</li>
+	<li> Snow :<br>
+		 very hard to make realistic , and I do not consider it our result a success , I tried to smooth the snow blending
+		 it on the surface , but could not give it a natural look. 
+	</li>
+	<li> implementation report : <br>
+		 
+	</li>
+</ul>
+
+
+<h3> Samuel </h3>
+
+
   
 <hr class="new1">
 &nbsp;
