--- a/index.html
+++ b/index.html
@@ -125,29 +125,34 @@
 	<li> setup 2D and 3D environment : <br>
 		 I mainly adapt assignment 7
 	</li>
+	<br>
 	<li> test different types of Worley noise : <br>
 		 euclidian - manhatan - different types of distortion - etc ...
 	</li>
+	<br>
 	<li> Parallax effect : 
 		 implemented first not to cast shadows but the deepness of the ice (with camera positon instead of light),
 		 I then switch to light , because the effect was much more appealing.
 	</li>
+	<br>
 	<li> Cube map , reflect/refract : <br>
 		 here regl.js gallery was my best friend
 	</li>
 	<li> normal map for craks and surface : <br>
 		 It was hard to find a good noise for the surface roughness, and how not to make both normal map smoother.
 	</li>
-		 
+	<br>	 
 	<li> Bezier curves : <br>
 		 I first implemented in processing (the repport bezier curves figures are made with it),
 		 then exported to JS.
 	</li>
+	<br>
 	<li> Snow :<br>
 		 very hard to make realistic , and I do not consider it our result a success , I tried to smooth the snow blending
 		 it on the surface , but could not give it a natural look. 
 	</li>
-	<li> implementation report : <br>
+	<br>
+	<li> writing implementation report : <br>
 		 
 	</li>
 </ul>
