--- a/index.html
+++ b/index.html
@@ -116,6 +116,16 @@
 
 
 
+<h2> Implementation</h2>
+
+<center>
+	<a href="report.pdf">
+
+		<h1> implementation report Link </h1>
+
+	</a>
+</center>
+
 
 <h2> Division of work </h2>
 
@@ -130,7 +140,7 @@
 		 euclidian - manhatan - different types of distortion - etc ...
 	</li>
 	<br>
-	<li> Parallax effect : 
+	<li> Parallax effect : <br>
 		 implemented first not to cast shadows but the deepness of the ice (with camera positon instead of light),
 		 I then switch to light , because the effect was much more appealing.
 	</li>
@@ -138,6 +148,7 @@
 	<li> Cube map , reflect/refract : <br>
 		 here regl.js gallery was my best friend
 	</li>
+	<br>
 	<li> normal map for craks and surface : <br>
 		 It was hard to find a good noise for the surface roughness, and how not to make both normal map smoother.
 	</li>
@@ -152,8 +163,8 @@
 		 it on the surface , but could not give it a natural look. 
 	</li>
 	<br>
-	<li> writing implementation report : <br>
-		 
+	<li> writing implementation report <br>
+	
 	</li>
 </ul>
 
