--- a/index.html
+++ b/index.html
@@ -129,6 +129,13 @@
 
 <h2> Division of work </h2>
 
+This semester has been difficult for the both of us, we had too many many projects at the same time ,
+and the the fact that our 3rd teammate left us did not help. <br>
+
+We started by dividing the work 50/50 , and both worked on our parts.
+Unfortunately, due to our late start, Samuel struggled to familiarise himself with the 
+rasterisation pipeline and the regl.js library, therefore I (Etienne) ended up implementing his parts.
+
 <h3> Etienne </h3>
 
 <ul>
@@ -163,8 +170,12 @@
 		 it on the surface , but could not give it a natural look. 
 	</li>
 	<br>
-	<li> writing implementation report <br>
+	<li> writing implementation report : <br>
 	
+	</li>
+	<br>
+	<li> video : <br>
+
 	</li>
 </ul>
 
