added some Samuel parts

--- a/index.html
+++ b/index.html
@@ -182,6 +182,14 @@ rasterisation pipeline and the regl.js library, therefore I (Etienne) ended up i
 
 <h3> Samuel </h3>
 
+<ul>
+
+<li> First draft of the video </li>
+<li> Format of the presentation part of the report </li>
+<li> Lot of struggle with merging the two canvas at the beginning of the project </li>
+
+</ul>
+
 
   
 <hr class="new1">
